-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
None
-
6.8
-
-
a930fb758 (dev), b7e0a7bfd (6.9), 712192b9c (6.8), 6a4639561 (dev), 0d36941a7 (6.9), 2928376e0 (6.8)
The buttons in the windows 11 style need some more fixes:
Light:
Dark (when opening through light):
Light when opening with dark (e.g. through Fusion -> dark -> windows11 -> light)
The problem is within polish() - the palette for QAbstractbuttons is set there which is not updated through dark/light changes as it seems. Does not matter at all - there is no need to set the palette within polish() at all.
The flat buttons are too large (marginsRemoved() is missing in this branch) and when QPalette is not modified in polish() only with checkable + checked + flat we get a wrong text color.